fix(cors): allow universal origin patterns and all headers for cloud deployment